consul-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: consul
spec:
  ports:
    - name: "8500"
      port: 8500
      targetPort: 8500
    - name: "8600"
      port: 8600
      protocol: UDP
      targetPort: 8600
  selector:
    io.kompose.service: consul
